--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "mustache-express": "^1.3.2",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "sequelize-cli": "^6.3.0"
   }
 }
