--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.17.2",
     "mustache-express": "^1.3.2",
     "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.12.5",
     "sequelize-cli": "^6.3.0"
   }
 }
